--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -1,14 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import java.net.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.wendelaar.projectbus.view.controller.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.wendelaar.projectbus.view.controller.LoginController">
    <children>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="600.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <HBox prefHeight="408.0" prefWidth="606.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" text="Button" />
+            <AnchorPane prefHeight="400.0" prefWidth="300.0" styleClass="primary-bg" HBox.hgrow="SOMETIMES">
+               <children>
+                  <VBox alignment="CENTER" prefHeight="0.0" prefWidth="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="LLS">
+                           <font>
+                              <Font name="Open Sans SemiBold" size="88.0" />
+                           </font>
+                        </Text>
+                     </children>
+                  </VBox>
+               </children></AnchorPane>
+            <AnchorPane prefHeight="400.0" prefWidth="300.0" styleClass="root3" HBox.hgrow="SOMETIMES">
+               <children>
+                  <GridPane alignment="CENTER" hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <Label text="Username:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                           <font>
+                              <Font name="Open Sans Bold" size="16.0" />
+                           </font>
+                           <GridPane.margin>
+                              <Insets top="-10.0" />
+                           </GridPane.margin></Label>
+                        <TextField fx:id="usernameInput" prefWidth="200" promptText="Username" styleClass="primary-input" GridPane.columnSpan="2" GridPane.rowIndex="1">
+                           <font>
+                              <Font name="Open Sans Regular" size="15.0" />
+                           </font></TextField>
+                        <PasswordField fx:id="passwordInput" prefWidth="250" promptText="Password" styleClass="primary-input" GridPane.columnSpan="2" GridPane.rowIndex="3">
+                           <font>
+                              <Font size="15.0" />
+                           </font></PasswordField>
+                        <Button alignment="CENTER" onAction="#tryLogin" prefWidth="250" styleClass="primary-bg" text="Login" textFill="WHITE" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="5">
+                           <GridPane.margin>
+                              <Insets top="10.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="Open Sans ExtraBold" size="14.0" />
+                           </font></Button>
+                        <Label text="Password:" textFill="WHITE" GridPane.rowIndex="2">
+                           <font>
+                              <Font name="Open Sans Bold" size="16.0" />
+                           </font>
+                        </Label>
+                     </children>
+                     <columnConstraints>
+                        <ColumnConstraints />
+                        <ColumnConstraints />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                        <RowConstraints />
+                     </rowConstraints>
+                  </GridPane>
+               </children></AnchorPane>
          </children>
       </HBox>
    </children>
