--- a/src/main/resources/views/indexUser.fxml
+++ b/src/main/resources/views/indexUser.fxml
@@ -11,7 +11,7 @@
    <children>
       <Pane prefHeight="400.0" prefWidth="137.0" style="-fx-background-color: blue;">
          <children>
-            <Button layoutY="53.0" mnemonicParsing="false" onAction="#onShowLoanedItems" prefHeight="25.0" prefWidth="137.0" text="Loaned Items" />
+            <Button fx:id="loanedItemsButton" layoutY="53.0" mnemonicParsing="false" onAction="#onShowLoanedItems" prefHeight="25.0" prefWidth="137.0" text="Loaned Items" />
          </children>
       </Pane>
       <AnchorPane fx:id="showDataPane" layoutX="137.0" prefHeight="400.0" prefWidth="463.0" />
