--- a/src/main/resources/views/indexUser.fxml
+++ b/src/main/resources/views/indexUser.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.wendelaar.projectbus.view.controller.IndexController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.wendelaar.projectbus.view.controller.user.UserIndexController">
    <children>
-      <Pane prefHeight="400.0" prefWidth="137.0" style="-fx-background-color: blue;">
+      <Pane prefHeight="400.0" prefWidth="137.0" styleClass="root">
          <children>
-            <Button fx:id="loanedItemsButton" layoutY="56.0" mnemonicParsing="false" onAction="#onShowLoanedItems" prefHeight="25.0" prefWidth="137.0" text="Loaned Items" />
-            <Button fx:id="availableItemsButton" layoutY="92.0" mnemonicParsing="false" onAction="#onShowAvailableItems" prefHeight="25.0" prefWidth="137.0" text="Available Items" />
+            <Button fx:id="loanedItemsButton" layoutY="56.0" mnemonicParsing="false" onAction="#onShowLoanedItems" prefHeight="25.0" prefWidth="137.0" styleClass="primary-button" text="Loaned Items" />
+            <Button fx:id="availableItemsButton" layoutY="92.0" mnemonicParsing="false" onAction="#onShowAvailableItems" prefHeight="25.0" prefWidth="137.0" styleClass="primary-bg" text="Available Items" />
+            <Button fx:id="reservedItemsButton" layoutY="135.0" mnemonicParsing="false" onAction="#onShowReservedItems" prefHeight="25.0" prefWidth="137.0" styleClass="primary-bg" text="Reserved Items" />
          </children>
       </Pane>
-      <AnchorPane fx:id="showDataPane" layoutX="137.0" prefHeight="400.0" prefWidth="463.0" />
+      <AnchorPane fx:id="showDataPane" layoutX="140.0" prefHeight="400.0" prefWidth="460.0" />
    </children>
 </AnchorPane>
