--- a/src/main/resources/views/styles.css
+++ b/src/main/resources/views/styles.css
@@ -6,12 +6,16 @@
 	-fx-background-color: -fx-back-color;
 }
 
-.primary-input {
-	-fx-text-fill: #1976d2;
+.primary-button {
+	-fx-background-color: -fx-back-color;
 }
 
-.primary-bg:hover {
+.primary-button:hover {
 	-fx-background-color: #3dc5ff;
+}
+
+.primary-input {
+	-fx-text-fill: #1976d2;
 }
 
 .root {
