--- a/src/main/resources/views/indexLibrarian.fxml
+++ b/src/main/resources/views/indexLibrarian.fxml
@@ -27,6 +27,11 @@
                   <Font name="Open Sans SemiBold" size="12.0" />
                </font>
             </Button>
+            <Button fx:id="createUserButton" layoutY="89.0" mnemonicParsing="false" onAction="#onShowCreateUser" prefHeight="25.0" prefWidth="137.0" styleClass="primary-button" text="New User" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Open Sans SemiBold" size="12.0" />
+               </font>
+            </Button>
             </children>
         </Pane>
         <AnchorPane fx:id="showDataPane" layoutX="140.0" prefHeight="400.0" prefWidth="460.0" />
