--- a/src/main/resources/views/indexLibrarian.fxml
+++ b/src/main/resources/views/indexLibrarian.fxml
@@ -9,7 +9,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="name.wendelaar.projectbus.view.controller.librarian.LiberianIndexController">
     <children>
-        <Pane prefHeight="400.0" prefWidth="137.0" styleClass="root">
+        <Pane prefHeight="400.0" prefWidth="137.0" styleClass="root" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="463.0" AnchorPane.topAnchor="0.0">
             <children>
                 <Text fill="WHITE" layoutX="39.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="LLS" textAlignment="CENTER">
                     <font>
@@ -32,8 +32,13 @@
                   <Font name="Open Sans SemiBold" size="12.0" />
                </font>
             </Button>
+            <Button fx:id="showItemsButton" layoutY="120.0" mnemonicParsing="false" onAction="#onShowItems" prefHeight="25.0" prefWidth="137.0" styleClass="primary-button" text="Items" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Open Sans SemiBold" size="12.0" />
+               </font>
+            </Button>
             </children>
         </Pane>
-        <AnchorPane fx:id="showDataPane" layoutX="140.0" prefHeight="400.0" prefWidth="460.0" />
+        <AnchorPane fx:id="showDataPane" layoutX="140.0" prefHeight="400.0" prefWidth="460.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
     </children>
 </AnchorPane>
