--- a/src/main/resources/views/indexLibrarian.fxml
+++ b/src/main/resources/views/indexLibrarian.fxml
@@ -37,6 +37,11 @@
                   <Font name="Open Sans SemiBold" size="12.0" />
                </font>
             </Button>
+            <Button fx:id="createItemButton" layoutY="151.0" mnemonicParsing="false" onAction="#onCreateItem" prefHeight="25.0" prefWidth="137.0" styleClass="primary-button" text="New Item" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Open Sans SemiBold" size="12.0" />
+               </font>
+            </Button>
             </children>
         </Pane>
         <AnchorPane fx:id="showDataPane" layoutX="140.0" prefHeight="400.0" prefWidth="460.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="140.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
